static/common.css
.x-axis {
  height: 1.5em;
}

.plot-area {
  display: block;
  height: 200px;
}

.line {
  stroke: blue;
}

.top-label {
  margin-bottom: 0;
}

table,td {
  border-collapse: collapse;
}
table, th, td {
  border: thin solid grey;
  padding: 5px;
}

div#table {
  padding: 20px;
}

